change layout of work page, fixed some spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -183,6 +183,13 @@ a:hover, a:focus {
   opacity: 1;
 }
 
+.flex-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+
 nav {
   display: flex;
   justify-content: flex-start;
@@ -419,13 +426,14 @@ a:hover, a:focus {
 .work {
   display: flex;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   overflow-y: scroll;
   scroll-behavior: smooth;
   scrollbar-color: #EB5E28 #1D1E1F;
   scrollbar-width: thin;
   gap: 32px;
+  padding-right: 24px;
   transition: all 0.2s ease-in-out;
   width: 100%;
 }
@@ -434,10 +442,11 @@ a:hover, a:focus {
   justify-content: flex-start;
   align-items: flex-start;
   flex-direction: column;
+  box-sizing: border-box;
   padding: 24px;
   background-color: #1D1E1F;
   border-radius: 8px;
-  width: 95%;
+  width: 100%;
 }
 .work section subsection {
   display: flex;
@@ -536,6 +545,29 @@ a:hover, a:focus {
 .work section#projects subsection .items .item .item-name {
   font-weight: 900;
 }
+@media (max-width: 576px) {
+  .work section#projects subsection .items .item {
+    width: 270px;
+    height: 180px;
+  }
+}
+.work .flex-row {
+  position: relative;
+  width: 100%;
+}
+.work .flex-row section {
+  width: 48%;
+  height: 100%;
+}
+@media (max-width: 768px) {
+  .work .flex-row {
+    flex-direction: column;
+    gap: 24px;
+  }
+  .work .flex-row section {
+    width: 100%;
+  }
+}
 .work .item {
   transition: all 0.1s ease-in-out;
 }
@@ -601,12 +633,11 @@ a:hover, a:focus {
   justify-content: space-between;
   align-items: flex-start;
   flex-direction: row;
-  overflow-x: scroll;
+  overflow: scroll;
   scroll-behavior: smooth;
   scrollbar-color: #EB5E28 #1D1E1F;
   scrollbar-width: thin;
   position: relative;
-  flex-wrap: wrap;
   width: 100%;
   height: 100%;
 }
@@ -685,7 +716,7 @@ a:hover, a:focus {
   align-items: flex-start;
   flex-direction: column;
   width: 100%;
-  max-width: 1340px;
+  max-width: 1200px;
   max-height: 80vh;
   padding: 48px;
   transition: all 0.2s ease-in-out;
