--- a/scss/work.scss
+++ b/scss/work.scss
@@ -1,16 +1,18 @@
 .work {
-  @include flex-container(flex-start, flex-start, column);
+  @include flex-container(flex-start, center, column);
   @include scrollable-y;
   gap: $spacing-lg;
+  padding-right: $spacing-md;
   transition: $transition;
   width: 100%;
   
   section {
     @include flex-container(flex-start, flex-start, column);
+    box-sizing: border-box;
     padding: $spacing-md;
     background-color: $color-dark-grey;
     border-radius: $borderRadiusMedium;
-    width: 95%;
+    width: 100%;
   
     subsection {
       @include flex-container(flex-start, flex-start, column);
@@ -108,8 +110,31 @@
               font-weight: 900;
             }
 
+            @include respond-to(sm) {
+              width: 270px;
+              height: 180px;
+            }
+
           }
         }
+      }
+    }
+  }
+
+  .flex-row {
+    position: relative;
+    width: 100%;
+
+    section {
+      width: 48%;
+      height: 100%;
+    }
+
+    @include respond-to(md) {
+      flex-direction: column;
+      gap: $spacing-md;
+      section {
+        width: 100%;
       }
     }
   }
@@ -167,9 +192,8 @@
     
     .popup-children {
       @include flex-container(space-between, flex-start, row);
-      @include scrollable-x; 
+      @include scrollable; 
       position: relative;
-      flex-wrap: wrap;
       width: 100%;
       height: 100%;
 
@@ -188,6 +212,7 @@
         width: 29%;
         height: 100%;
       }
+
     }
   }
 }
